# R-studioConf

./: .aider.conf.yml  .aiignore  .clinerules  .cursorrules  .gitignore  .gitmodules  .pylintrc  .windsurfrules  CHANGELOG.md  CLAUDE.md  Makefile  Nadiora.odt  README.md  init.sh  r_env_manager.sh  r_env_manager.sh_old  setup_r_env.sh
.ai/: README.md  agents.md  chatgpt.md  claude.md  extracted_versions.env  gemini.md  generate.sh  install-hooks.sh  project.yml  validate.sh
.claude/: settings.json
.github/: copilot-instructions.md
assets/: composite_logos.py  create_bigea_biome_composite.py  create_transparent_composite.py
config/: SITE_OVERRIDE.md  admin_recipients.txt  admin_recipients.txt.example  configure_rstudio.vars.conf  configure_time_sync.vars.conf  filebrowser.yml  install_nginx.vars.conf  join_domain_samba.vars.conf  join_domain_samba.vars.conf.example  join_domain_sssd.vars.conf  join_domain_sssd.vars.conf.example  kerberos_setup.vars.conf  lib_kerberos_setup.vars.conf  lib_kerberos_setup.vars.conf.example  nginx_setup.vars.conf  nginx_setup.vars.conf_old  nginx_setup_extended.vars.conf  optimize_system.vars.conf  optimize_system_proxmox.vm.vars.conf  pin_r_version.vars.conf  r_env_manager.conf  rstudio_setup.vars.conf  samba_kerberos_setup.vars.conf  scopri_progetti_known.conf  scopri_progetti_known.conf.example  scopri_theme_map.conf.example  secure-web-access.conf  setup_nodes.site.vars.conf.example  setup_nodes.vars.conf  setup_nodes.vars.conf_original  user_email_map.txt  (+3 more)
src/biome_core_rust/: Cargo.toml
src/biome_core_rust/src/: lib.rs
(+493 files in other folders)
